2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/vcs/svn.py:
	Fixed tiny, but with serious consequences, logic error. Cache should now
	be properly bypassed when invalidate is set to True.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	NautilusSvn.py is in a state of flux right now (might be broken), but 
	committing anyways to save changes.
	
	* nautilussvn/lib/vcs/svn.py:
	Reverted SVN.status back to r387 but marked it deprecated and added 
	function status_with_cache to replace it (entirely refactored). I'm too 
	worried replacing status right now would break other stuff (and bother 
	Adam in the process). 

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Updated workaround for the multiple emblem problem, now it seems to work.

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Ok, I've thought up of a possible workaround for the threading issues.

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added temporary hack in get_background_items back in again to try and work
	around the multiple emblem problem (because it seems to work).

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Implemented cache to significantly improve performance. Also fixed bug
	which resulted in watches being added recursvily on the parent
	directory for every direct child item (see code review for more info),
	that was obviously a major performance drag.
	
	Not 100% sure if the status cache is implemently correctly, it's quite ugly.

2008-12-29  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py: